APF-788: Support personal repos
* Adds support for personal bitbucket server repos
* Tidies up verbosity
* Updates tests

Signed-off-by: John Bard <jbard@vmware.com>